# robohow_sot

./: .travis.yml  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  readme.md  readme.txt  setup.py
launch/: dummy_cram.launch  sot.launch
scripts/: constraintCommandListener.py  constraintListener.py  dummySequencer.py  exampleInterface.py  exampleInterface.yaml  hrp4_pouring.py  joy2twist.basic.py  starter.py  task2sot.py  taskParameter2sot.py  tf_to_MatrixHomo.py
src/robohow_sot/: utils.py
